add permission: force-lock,disable-camera,set-global-proxy

--- a/app/src/main/res/xml/device_admin.xml
+++ b/app/src/main/res/xml/device_admin.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device-admin>
-    <uses-policies></uses-policies>
+    <uses-policies>
+        <force-lock />
+        <disable-camera />
+        <set-global-proxy />
+    </uses-policies>
 </device-admin>
