--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,74 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector
-    android:height="108dp"
-    android:width="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#3DDC84"
-          android:pathData="M0,0h108v108h-108z"/>
-    <path android:fillColor="#00000000" android:pathData="M9,0L9,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M19,0L19,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M29,0L29,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M39,0L39,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M49,0L49,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M59,0L59,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M69,0L69,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M79,0L79,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M89,0L89,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M99,0L99,108"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,9L108,9"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,19L108,19"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,29L108,29"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,39L108,39"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,49L108,49"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,59L108,59"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,69L108,69"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,79L108,79"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,89L108,89"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M0,99L108,99"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M19,29L89,29"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M19,39L89,39"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M19,49L89,49"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M19,59L89,59"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M19,69L89,69"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M19,79L89,79"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M29,19L29,89"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M39,19L39,89"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M49,19L49,89"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M59,19L59,89"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M69,19L69,89"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
-    <path android:fillColor="#00000000" android:pathData="M79,19L79,89"
-          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512"
+    tools:ignore="VectorRaster,VectorPath">
+    <path
+        android:pathData="M323,513C215.36,513 108.22,513 1.04,513C1.04,342.4 1.04,171.8 1.04,1.1C171.56,1.1 342.11,1.1 512.84,1.1C512.84,171.67 512.84,342.33 512.84,513C449.8,513 386.65,513 323,513M169.66,346.11C175.12,346.11 180.58,346.11 186.44,346.11C186.44,351.69 186.44,356.74 186.44,362.26C179.96,362.26 173.82,362.2 167.69,362.28C163.23,362.35 160.21,365.26 159.92,369.65C159.81,371.3 159.93,372.98 159.9,374.64C159.8,379.21 161.99,381.37 166.59,381.31C172.75,381.23 178.93,381.49 185.08,381.24C188.72,381.1 190.07,382.15 190,385.99C189.92,390.96 192.8,394.37 197.39,396.23C202.06,398.12 206.78,397.44 209.69,393.63C211.8,390.87 213.02,386.72 213.04,383.18C213.27,343.36 213.26,303.53 213.12,263.71C213.1,259.44 214.08,257.81 218.65,258C227.47,258.36 236.31,257.98 245.14,258.2C247.08,258.24 249.52,258.95 250.84,260.26C280.6,289.63 310.24,319.13 339.85,348.65C340.8,349.6 341.75,351.13 341.73,352.36C341.54,364.15 340.92,375.93 340.86,387.71C340.82,396.19 348.72,403.89 357.32,404.05C366.98,404.23 376.65,404.22 386.31,404.05C395.21,403.9 402.87,396.32 403.05,387.42C403.25,377.6 403.26,367.76 403.04,357.93C402.86,349.81 395.97,342 388.03,341.87C375.77,341.69 363.5,342.5 351.23,342.73C349.98,342.75 348.41,341.98 347.49,341.07C320.53,314.56 293.62,287.99 266.73,261.41C266.01,260.69 265.54,259.71 264.72,258.52C293.03,258.52 320.72,258.52 348.83,258.52C348.83,260.91 348.81,262.88 348.83,264.85C348.97,275.41 355.87,283.58 366.3,284.3C375.75,284.96 385.3,285.08 394.76,284.57C405.11,284.01 411.9,275.98 411.93,265.51C411.95,257.34 411.96,249.18 411.93,241.01C411.89,230.06 403.99,222.16 393,222.1C385.17,222.06 377.34,222.09 369.5,222.09C356.49,222.1 348.84,229.41 348.93,242.29C348.96,246.32 347.67,247.36 343.8,247.33C319.47,247.19 295.14,247.27 270.81,247.25C269.47,247.25 268.13,246.99 266.79,246.86C266.49,246.33 266.2,245.79 265.91,245.26C293.18,218.36 320.45,191.46 347.76,164.61C348.51,163.87 349.71,163.11 350.68,163.14C361.97,163.38 373.25,163.92 384.54,164.07C395.44,164.22 403,156.59 403.09,145.61C403.17,137.28 403.14,128.95 403.1,120.62C403.05,109.67 395.41,101.59 384.51,101.29C375.85,101.06 367.18,101.08 358.52,101.3C350.04,101.51 341.59,107.98 341.16,115.8C340.5,127.75 340.74,139.79 341.33,151.75C341.48,154.77 341.21,156.56 339.15,158.63C310.27,187.48 281.47,216.41 252.56,245.24C251.44,246.36 249.44,247.12 247.83,247.15C237.83,247.33 227.83,247.14 217.84,247.3C214.34,247.35 213.09,245.99 213.15,242.59C213.27,234.93 213.5,227.25 213.07,219.6C212.81,214.83 214.46,212.76 218.95,211.11C240.75,203.1 253.66,181.07 249.78,158.77C246.5,139.95 235.72,126.77 217.77,120.57C199.25,114.18 182.14,118.04 167.82,131.55C142.08,155.85 151.63,199.06 185.32,211.61C187.79,212.53 190.04,212.88 190.01,216.74C189.81,247.9 189.85,279.06 189.97,310.22C189.99,314.12 188.39,315.09 184.88,314.97C179.23,314.79 173.56,314.84 167.89,314.94C162.37,315.03 160.03,317.38 159.92,322.93C159.82,327.76 159.86,332.6 159.91,337.43C159.99,344.74 161.37,346.07 169.66,346.11z"
+        android:fillColor="#272D35"
+        android:strokeColor="#00000000" />
+    <path
+        android:pathData="M225.93,157.41C229.1,168.76 226.85,178.35 217.94,185.64C209.59,192.47 200.04,193.48 190.38,188.78C180.5,183.97 175.75,175.62 176.01,164.59C176.26,154.09 184.77,143.98 195.41,141.36C206.71,138.58 218.37,143.47 224.09,153.43C224.75,154.58 225.25,155.82 225.93,157.41z"
+        android:fillColor="#262E37"
+        android:strokeColor="#00000000" />
+    <path
+        android:pathData="M351.09,143.67C351.1,135.55 351.07,127.9 351.12,120.25C351.15,114.71 353.69,112.01 359.29,111.92C367.61,111.79 375.92,111.83 384.24,111.91C389.33,111.97 392.25,114.31 392.42,119.32C392.72,128.45 392.73,137.6 392.36,146.71C392.18,150.94 389.4,153.8 384.85,153.86C376.04,153.98 367.22,154.02 358.41,153.87C353.26,153.78 351.42,151.11 351.09,143.67z"
+        android:fillColor="#262F38"
+        android:strokeColor="#00000000" />
+    <path
+        android:pathData="M375.96,393.84C370.14,393.84 364.81,393.94 359.49,393.8C353.88,393.65 351.26,391.07 351.17,385.43C351.03,377.11 351.01,368.79 351.19,360.47C351.32,354.24 353.9,351.95 360.24,351.93C368.39,351.9 376.55,351.86 384.7,351.96C389.59,352.02 392.12,354.45 392.21,359.31C392.37,367.95 392.44,376.61 392.28,385.26C392.16,391.86 390.03,393.75 383.44,393.83C381.11,393.86 378.78,393.84 375.96,393.84z"
+        android:fillColor="#262F37"
+        android:strokeColor="#00000000" />
+    <path
+        android:pathData="M374.07,274.12C371.75,274.12 369.91,274.16 368.08,274.11C363.19,273.99 360.27,271.4 360.16,266.45C359.98,257.45 360,248.45 360.16,239.46C360.24,235.05 362.93,232.82 367.27,232.79C376.1,232.73 384.93,232.71 393.75,232.8C398.41,232.84 401.09,235.46 401.18,240.29C401.34,249.11 401.36,257.95 401.2,266.77C401.11,271.51 398.38,274.02 393.54,274.1C387.22,274.21 380.88,274.12 374.07,274.12z"
+        android:fillColor="#262E36"
+        android:strokeColor="#00000000" />
 </vector>
