--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-
     <style name="Theme.Dhizuku" parent="Theme.Material3.DynamicColors.Light.NoActionBar">
+        <item name="android:statusBarColor" tools:targetApi="q">@android:color/transparent</item>
+        <item name="android:navigationBarColor" tools:targetApi="q">@android:color/transparent</item>
         <item name="android:enforceStatusBarContrast" tools:targetApi="q">false</item>
         <item name="android:enforceNavigationBarContrast" tools:targetApi="q">false</item>
     </style>
